Default theme: fix overlapping name

--- a/templates/default.css
+++ b/templates/default.css
@@ -53,6 +53,7 @@ h2 {
   text-transform: uppercase;
   font-weight: 200;
   font-family: 'Exo 2', sans-serif;
+  line-height: 1.1em;
 }
 
 a {
